# rs-approx

./: Cargo.toml  README.md
src/: approx.rs  approx_eq.rs  lib.rs
