[package]
name = "approx_eq"
version = "0.1.0"
authors = ["nathanfaucett <nathanfaucett@gmail.com>"]

keywords = ["approx_eq"]
description = "approx_eq trait for comparing floats"
license = "MIT"
readme = "README.md"
repository = "https://github.com/nathanfaucett/rs-approx_eq.git"
homepage = "https://github.com/nathanfaucett/rs-approx_eq"

[dependencies]
zero = { git = "https://github.com/nathanfaucett/rs-zero.git" }
